done first work ver.3

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </section> 
 
       <section class="feynman">
-        <h2 class="feynman__title">Метод <br>Фейнмана</h2>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a class="feynman__link" href="">Подробднее &rarr;</a>
       </section>
