--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучение</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragrah">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragrah"><span class="two-columns__span-accent">Вывод:&#32;</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать</p>
-            <p class="two-columns__paragrah">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p> 
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:&#32;</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p> 
           </div>
         </article>
       </section>
@@ -35,35 +35,35 @@
         <ul class="cards">
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="Фото карточки attention">
-            <h3 class="cards__title">Два вида внимания</h3>
-            <p class="cards__desciption">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-recall.png" alt="Фото карточки recall">
-            <h3 class="cards__title">Recall</h3>
-            <p class="cards__desciption">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="Фото карточки interliving">
-            <h3 class="cards__title">Интерливинг</h3>
-            <p class="cards__desciption">Изучайте несколько нвыков одновременно, они обогащают друг друга.</p>
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько нвыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-question.png" alt="Фото карточки question">
-            <h3 class="cards__title">Вопросы</h3>
-            <p class="cards__desciption">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-competence.png" alt="Фото карточки competence">
-            <h3 class="cards__title">Иллюзия компетентности</h3>
-            <p class="cards__desciption">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
         </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -74,7 +74,7 @@
         <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
-            <p class="two-columns__paragrah">С детства Барбаре не давалась математика. Она считала себя законченным
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
               гуманитарием, причём далеко не самым умным. В армии она изучала русский язык,
               чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для
               продвижения по службе нужно было сдавать математику. И тогда Барбара придумала
@@ -86,7 +86,7 @@
 
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link" href="#">Подробднее &rarr;</a>
       </section>
 
@@ -136,7 +136,7 @@
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир - школа</h2>
           <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир - школа» нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Фото book-pic">
@@ -148,7 +148,7 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принцип обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кайфмана</h3>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -195,7 +195,7 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучение</h3>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучение</p>
         <ul class="resources__logo-zone">
           <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Arzamas"></a></li>
           <li><a class="resources__link" href="#"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип N+1"></a></li>
